--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,25 @@
+/* css for the message dialouge in Messages.js component */
+.thread-container{
+    flex-grow: 1;
+    position: relative;
+    overflow-y: scroll;
+    max-height: 86vh;
+}
+
+.thread-container .thread{
+    position: relative;
+    width: 100%;
+    min-height: 86vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+}
+
+.thread-container::-webkit-scrollbar {
+    display: none;
+  }
+
+/* css for each message */
 .message-container{
     display: flex;
     justify-content: flex-start;
@@ -16,27 +38,6 @@
     background-color: #0099FF;
     color: white;
 }
-
-/* css for the message dialouge in Messages.js component */
-.thread-container{
-    flex-grow: 1;
-    position: relative;
-    overflow-y: scroll;
-    max-height: 85vh;
-}
-
-.thread-container .thread{
-    position: relative;
-    width: 100%;
-    min-height: 85vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-}
-
-.thread-container::-webkit-scrollbar {
-    display: none;
-  }
 
   /* css for typing indicator */
   
