fixed bug when clicking into a pic

--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,7 @@
 .message-container{
     display: flex;
     justify-content: flex-start;
-    padding: 0 1vw;
+    padding: 3px 12px;
 }
 
 .message-container.right {
